indus/test/test_examples/type_errors/local_dec_dup2.tpc
init {
   bit<32> x = 1;
   bool x = true;
} 
telemetry {} 
check {}